--- a/app/src/main/res/layout-v21/chat_recent_tab.xml
+++ b/app/src/main/res/layout-v21/chat_recent_tab.xml
@@ -2,37 +2,48 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical" >
-
-    <RelativeLayout
-        android:id="@+id/empty_layout_chat_recent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left">
-
-        <TextView
-            android:id="@+id/empty_text_chat_recent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/recent_chat_empty"
-            android:textColor="@color/text_secondary"
-            android:textSize="18sp" />
+    android:background="@color/white" >
 
         <LinearLayout
-            android:id="@+id/empty_buttons_layout_recent_chat"
+            android:id="@+id/linear_empty_layout_chat_recent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_below="@id/empty_text_chat_recent"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/empty_text_chat_recent_invite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/recent_chat_empty_invite"
+                android:textColor="@color/mail_my_account"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/empty_image_view_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_empty_chat_list"/>
+
+            <TextView
+                android:id="@+id/empty_text_chat_recent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/recent_chat_empty"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/adapters_background"
+                android:textSize="18sp" />
 
             <Button
                 android:id="@+id/invite_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:layout_gravity="center_horizontal"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
                 android:paddingTop="-3dp"
                 android:paddingBottom="-3dp"
                 android:textColor="@color/white"
@@ -42,7 +53,7 @@
                 android:stateListAnimator="@anim/button_upgrade_elevation"
                 android:tint="@android:color/white" />
 
-            <Button
+    <!--        <Button
                 android:id="@+id/get_started_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -52,11 +63,8 @@
                 android:text="@string/get_started_button"
                 android:background="@drawable/white_rounded_corners_button"
                 android:elevation="@dimen/elevation_upgrade_low"
-                android:stateListAnimator="@anim/button_upgrade_elevation"/>
-
+                android:stateListAnimator="@anim/button_upgrade_elevation"/>-->
         </LinearLayout>
-
-    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chat_recent_list_view"
