--- a/app/src/main/res/layout/item_message_chat.xml
+++ b/app/src/main/res/layout/item_message_chat.xml
@@ -3,6 +3,7 @@
     android:id="@+id/message_chat_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:descendantFocusability="blocksDescendants">
 
     <!--DATE LAYOUT -->
@@ -181,7 +182,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="6dp"
+                        android:layout_marginLeft="8dp"
                         android:layout_centerVertical="true"/>
 
                     <TextView
@@ -192,7 +193,7 @@
                         android:layout_toRightOf="@+id/content_own_message_file_thumb"
                         android:textSize="14sp"
                         android:layout_marginTop="11dp"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="7dp"
                         android:layout_marginRight="8dp"
                         android:singleLine="true"
                         android:maxLines="1"
@@ -208,13 +209,83 @@
                         android:layout_below="@+id/content_own_message_file_name"
                         android:textSize="12sp"
                         android:layout_marginBottom="11dp"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="7dp"
                         android:layout_marginRight="8dp"
                         android:inputType="textMultiLine|textNoSuggestions"
                         android:gravity="left"/>
 
                 </RelativeLayout>
                 <!--End RelativeLayout file-->
+
+                <RelativeLayout
+                    android:id="@+id/content_own_message_contact_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_text_view_chat_own_message"
+                    android:layout_alignParentLeft="true"
+                    android:gravity="left">
+
+                    <RelativeLayout
+                        android:id="@+id/content_own_message_contact_layout_avatar"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="10dp"
+                        android:layout_centerVertical="true">
+
+                        <mega.privacy.android.app.components.RoundedImageView
+                            android:id="@+id/content_own_message_contact_thumb"
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent"
+                            android:scaleType="fitCenter"
+                            android:layout_centerInParent="true"
+                            rounded:border_color="@color/border_file_properties"
+                            rounded:border_width="0dp"
+                            rounded:corner_radius="20dp" />
+
+                        <TextView
+                            android:id="@+id/content_own_message_contact_initial_letter"
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent"
+                            android:layout_centerInParent="true"
+                            android:gravity="center_horizontal|center_vertical"
+                            android:paddingBottom="3dp" />
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/content_own_message_contact_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/name_my_account"
+                        android:layout_toRightOf="@+id/content_own_message_contact_layout_avatar"
+                        android:textSize="14sp"
+                        android:layout_marginTop="11dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="8dp"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:ellipsize="middle"
+                        android:gravity="left"/>
+
+                    <TextView
+                        android:id="@+id/content_own_message_contact_email"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/mail_my_account"
+                        android:layout_toRightOf="@+id/content_own_message_contact_layout_avatar"
+                        android:layout_below="@+id/content_own_message_contact_name"
+                        android:textSize="12sp"
+                        android:layout_marginBottom="11dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="8dp"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:gravity="left"/>
+
+
+                </RelativeLayout>
+                <!--End RelativeLayout contact-->
 
                 <ImageView
                     android:id="@+id/own_triangle_icon"
@@ -430,16 +501,93 @@
 
                 </RelativeLayout>
 
-
-
             </RelativeLayout>
             <!--End RelativeLayout file-->
 
+            <RelativeLayout
+                android:id="@+id/content_contact_message_contact_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_text_view_chat_contact_message"
+                android:layout_alignParentLeft="true"
+                android:gravity="left">
 
+                <TextView
+                    android:id="@+id/content_contact_message_contact_sender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginRight="8dp"
+                    android:gravity="left"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/content_contact_message_contact_sender">
+
+                    <RelativeLayout
+                        android:id="@+id/content_contact_message_contact_layout_avatar"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="10dp">
+
+                        <mega.privacy.android.app.components.RoundedImageView
+                            android:id="@+id/content_contact_message_contact_thumb"
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent"
+                            android:scaleType="fitCenter"
+                            rounded:border_color="@color/border_file_properties"
+                            rounded:border_width="0dp"
+                            rounded:corner_radius="20dp" />
+
+                        <TextView
+                            android:id="@+id/content_contact_message_contact_initial_letter"
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent"
+                            android:layout_centerInParent="true"
+                            android:gravity="center_horizontal|center_vertical"
+                            android:paddingBottom="3dp" />
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/content_contact_message_contact_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/name_my_account"
+                        android:layout_toRightOf="@+id/content_contact_message_contact_layout_avatar"
+                        android:textSize="14sp"
+                        android:layout_marginTop="11dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="8dp"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:ellipsize="middle"
+                        android:gravity="left"/>
+
+                    <TextView
+                        android:id="@+id/content_contact_message_contact_email"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/mail_my_account"
+                        android:layout_toRightOf="@+id/content_contact_message_contact_layout_avatar"
+                        android:layout_below="@+id/content_contact_message_contact_name"
+                        android:textSize="12sp"
+                        android:layout_marginBottom="11dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="8dp"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:gravity="left"/>
+                </RelativeLayout>
+
+            </RelativeLayout>
+            <!--End RelativeLayout contact-->
 
         </RelativeLayout>
-
     </RelativeLayout>
-
-
 </RelativeLayout>
